
Changelog
=========

2018.5.0 (unreleased)
---------------------

- OGGBundle: Fix encoding issue with UNC filepaths containing non-ASCII characters. [lgraf]
- Send notification dispatch exceptions to Raven. [Rotonen]
- Do not present the paste UI to users without 'Copy or Move' on the target. [Rotonen]
- Add is_private field for tasks. [elioschmutz]
- Add trashing of protocol excerpts. [njohner]
- Display title for NullObject in meeting template selection. [njohner]
- Fix styling of favorite button. [njohner]
- Update the checksum when deleting attachments from E-mails. [njohner]
- return fullname of responsible in dossier GET. [njohner]
- Revoke temporary roles also when closing direct-execution tasks. [phgross]
- Add the GUI for task-reminders. [elioschmutz]
- Exclude searchroots from subdossier listings. [Rotonen, lgraf]
- Add filters (active and all) to membership listing. [njohner]
- Do not add a task-reminder activity if task is finished. [elioschmutz]
- Add restapi endpoints to add and delete task-reminders. [elioschmutz]
- Remove leftover checkout and edit, and cancel actions for sablon and proposal templates. [njohner]
- Do not include paragraphs in comittee table of contents. [njohner]
- Add TaskReminder to handle reminders in annotations and sql. [elioschmutz]
- Allow users to retry creating a file from a Oneoffixx template. [Rotonen]
- Add TaskReminderActivity object. [elioschmutz]
- Make paragraph templates deletable. [Rotonen]
- Add ReminderSetting SQL Model. [elioschmutz]
- Add task-reminder activity settings. [elioschmutz]
- Preserve proposal document title for proposal documents of submitted proposals. [Rotonen]
- Support adding tasks via REST API. [phgross]
- Reindex issuer of all proposals. [phgross]
- Correct info messages in meetings. [njohner]
- Add proposal tabs to repository folders. [Rotonen]
- Fix global scoped "show more" links for SOLR livesearch [Rotonen]